# qspool

./: .bumpversion.cfg  CITATION.cff  LICENSE  README.md  pyproject.toml  qspool.py
.github/workflows/: CI.yml
tests/: test.sh
tests/assets/: example1.slurm.sh  example2.slurm.sh
tests/mock_bin/: sbatch  squeue
