[build-system]
requires = ["setuptools>=61", "wheel>=0.33.6"]
build-backend = "setuptools.build_meta"

[project]
name = "qspool"
version = "0.4.1"
authors = [
  { name="Matthew Andres Moreno", email="m.more500@gmail.com" },
]
description = "Dependency-free script to spool jobs into SLURM scheduler without exceeding queue capacity limits."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = ["slurm", "high-performance computing", "cluster computing"]
license = {text = "MIT license"}

[project.urls]
homepage = "https://github.com/mmore500/qspool"

[tool.black]
line_length = 79

[tool.isort]
force_sort_within_sections = true
line_length = 79
profile = "black"
skip_gitignore = true
